# perturbflow-analyzer

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  METHOD.md  QUICK_START.md  README.md  RESULT.md  ROADMAP.md  inspect_interactive_html.py  inspect_interactive_html.sbatch  make_corrected_original_report.py  make_domjson_report.py  make_robust_interactive_report.py  make_standalone_report.py  make_static_interactive_report.py  mkdocs.yml  pyproject.toml  rebuild_corrected_original_report.sbatch  rebuild_domjson_report.sbatch  rebuild_robust_interactive_report.sbatch  rebuild_standalone_report.sbatch  rebuild_static_interactive_report.sbatch  regen_cluster_proportions.sbatch  regen_grn_plots.py  regen_interactive_report.py  regen_mini20_effect_only.sbatch  regen_mini20_full.sbatch  regen_mini20_html_only.sbatch  regen_report.sbatch  restore_original_layout_report.py  restore_original_layout_report.sbatch  run_mixscape.sbatch  run_perturbflow_analyzer.sbatch  run_perturbscope_v1.sbatch  serve_interactive_report.sbatch  validate_corrected_original_report.py  validate_corrected_original_report.sbatch  (+12 more)
.github/workflows/: ci.yml
configs/: cluster_default.json  mixscape_default.json  quickstart.json  test.json
docs/: DESIGN.md  METHOD.md  QUICK_START.md  RESULT.md  ai-agents.md  data-input.md  examples.md  github.md  index.md  methods.md  outputs.md  quickstart.md  release-notes.md  vision.md  workflow.md
examples/: 01_prepare_and_run.ipynb  02_step_rerun_and_config.ipynb  03_interpret_with_agents.ipynb  04_explore_outputs.ipynb  README.md
examples/data/: README.md  adamson_2016_upr_360x1000.h5ad
perturbflow/: __init__.py  ai.py  api.py  cli.py  workflow.py
perturbflow/analyzer/: __init__.py  bundle.py  cli.py  config.py  cscore.py  deg.py  eda.py  genenet.py  interaction.py  interactive.py  io.py  pathways.py  perturbation.py  pipeline.py  preprocessing.py  process_data.py  programs.py  qc.py  regulatory.py  report.py  state.py  state_enrich.py  trajectory.py  utils.py
perturbflow/benchmark/: __init__.py
perturbflow/data/: __init__.py
perturbflow/predictor/: __init__.py
perturbflow/viz/: __init__.py
perturbflow/workflows/: __init__.py
perturbscope/: bundle.py  cli.py  config.py  cscore.py  deg.py  eda.py  genenet.py  interaction.py  interactive.py  io.py  pathways.py  perturbation.py  pipeline.py  preprocessing.py  programs.py  qc.py  regulatory.py  report.py  state.py  state_enrich.py  trajectory.py  utils.py
scripts/: make_example_subset.py  run_mixscape.R
tests/: test_perturbflow.py  test_perturbflow_smoke.py
