[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbflow"
version = "0.1.0"
description = "User-friendly Perturb-seq analysis, reporting, and AI-agent interpretation handoff"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "PerturbFlow Developers"}]
dependencies = [
  "anndata>=0.9",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scanpy>=1.9"
]

[project.optional-dependencies]
bundle = ["pyarrow>=12"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
dev = ["pytest>=7"]

[project.scripts]
perturbflow = "perturbflow.cli:main"
perturbscope = "perturbflow.analyzer.cli:main"
perturbscope-prepare = "perturbflow.analyzer.process_data:main"

[tool.setuptools]
packages = ["perturbflow", "perturbflow.analyzer"]
